--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-eframe = {path = "../egui/crates/eframe"}
+eframe = {git = "https://github.com/hatoo/egui.git", branch = "vst"}
 rand = "0.8"
 tracing = {version = "0.1", default-features = false, features = ["std"]}
 tracing-subscriber = "0.3"
